--- a/kind-config.yaml
+++ b/kind-config.yaml
@@ -1,3 +1,5 @@
+# Source: https://dustinspecker.com/posts/test-ingress-in-kind/#create-a-kind-cluster-with-ingress-support
+
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
@@ -13,5 +15,6 @@ nodes:
         hostPort: 80
         protocol: TCP
       - containerPort: 443
-        hostPort: 443
+        hostPort: 1443
         protocol: TCP
+  - role: worker
