--- a/oidc-with-dex/kind-config.yaml
+++ b/oidc-with-dex/kind-config.yaml
@@ -19,7 +19,6 @@ nodes:
     propagation: None
   kubeadmConfigPatches:
   - |
-    
     kind: ClusterConfiguration
     apiServer:
       extraArgs:
@@ -36,3 +35,16 @@ nodes:
         pathType: Directory
 - role: worker
 - role: worker
+  kubeadmConfigPatches:
+  - |
+    kind: JoinConfiguration
+    nodeRegistration:
+      kubeletExtraArgs:
+        node-labels: "ingress-ready=true"         
+  extraPortMappings:
+    - containerPort: 80
+      hostPort: 80
+      protocol: TCP
+    - containerPort: 443
+      hostPort: 1443
+      protocol: TCP
