--- a/oidc-with-dex/dex.yaml
+++ b/oidc-with-dex/dex.yaml
@@ -72,6 +72,14 @@ connectors:
       # The group name should be the "cn" value.
       nameAttr: cn
 
+
+    # groupSearch:
+    #   baseDN: ou=Groups,dc=example,dc=org
+    #   filter: "(objectClass=groupOfNames)"
+    #   userAttr: DN
+    #   groupAttr: member
+    #   nameAttr: cn
+
 staticClients:
 # Use with kubelogin 
 # - id: kubernetes
