--- a/simple/kind-config.yaml
+++ b/simple/kind-config.yaml
@@ -1,5 +1,5 @@
 # Source: https://dustinspecker.com/posts/test-ingress-in-kind/#create-a-kind-cluster-with-ingress-support
-
+---
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
 nodes:
@@ -18,3 +18,17 @@ nodes:
         hostPort: 1443
         protocol: TCP
   - role: worker
+  - role: worker
+    kubeadmConfigPatches:
+    - |
+      kind: JoinConfiguration
+      nodeRegistration:
+        kubeletExtraArgs:
+          node-labels: "ingress-ready=true"
+    extraPortMappings:
+      - containerPort: 80
+        hostPort: 80
+        protocol: TCP
+      - containerPort: 443
+        hostPort: 1443
+        protocol: TCP
