feat: add grafana agent manifests

--- a/monitoring/.env
+++ b/monitoring/.env
@@ -2,3 +2,4 @@ APP_NAMESPACE=kube-prometheus-stack
 KUBE_PROM_RELEASE_NAME=kube-prometheus-stack
 PROMTAIL_RELEASE_NAME=promtail
 LOKI_RELEASE_NAME=loki
+GRAFANA_AGENT_RELEASE_NAME=grafana-agent-operator
