changes for loki-scalable

--- a/monitoring/.env
+++ b/monitoring/.env
@@ -1,4 +1,5 @@
-APP_NAMESPACE=kube-prometheus-stack
+#APP_NAMESPACE=kube-prometheus-stack
+APP_NAMESPACE=monitoring
 KUBE_PROM_RELEASE_NAME=kube-prometheus-stack
 PROMTAIL_RELEASE_NAME=promtail
 LOKI_RELEASE_NAME=loki
